<resources>
    <string name="app_name">Dumb Due</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="editor_header">Editor</string>
    <string name="defaults_header">Defaults For New Reminders</string>

    <!-- Editor Preferences -->
    <string name="quick_access_times_title">Quick Access Times</string>
    <string name="time_picker_title">Time Picker</string>

    <!-- Defaults Preferences -->
    <string name="due_date_title">Due Date</string>
    <string name="auto_snooze_title">Auto Snooze</string>

    <string name="time_from_now_long_past">%1s %2s ago</string>
    <string name="time_from_now_long_future">%1s in %2s</string>

    <string name="time_from_now_short_past">%2s ago</string>
    <string name="time_from_now_short_future">in %2s</string>

    <!-- Repeat Text -->
    <string name="repeat_off">Repeat Off</string>
    <string name="repeat_daily">Daily %s</string>
    <string name="repeat_weekdays">Weekdays %s</string>
    <string name="repeat_weekly">%s</string>
    <string name="repeat_monthly">%1s each month at %2s</string>
    <string name="repeat_yearly">Every %s</string>
    <string name="repeat_custom">Repeat Custom</string>

    <!-- Auto Snooze Text -->
    <string name="auto_snooze_none">None</string>
    <string name="auto_snooze_minute">Every Minute</string>
    <string name="auto_snooze_5_minute">Every 5 Minutes</string>
    <string name="auto_snooze_10_minutes">Every 10 Minutes</string>
    <string name="auto_snooze_15_minutes">Every 15 Minutes</string>
    <string name="auto_snooze_30_minutes">Every 30 minutes</string>
    <string name="auto_snooze_hour">Every Hour</string>

    <string name="snackbar_add_error">Title cannot be empty.</string>
    <string name="reminder_hint">What chu wanna remember?</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>

    <string name="preference_edit_timer_setters">Edit Time Setter Buttons</string>
    <string name="reset">reset</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="fourth">Fourth</string>
    <string name="third">Third</string>
    <string name="last">Last</string>

    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>

    <string name="every">Every</string>

    <string name="last_day">Last Day</string>

    <string name="start">Start</string>

    <string name="add_day">Add Day</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

    <string name="repeat_interval">Repeat Interval</string>

    <string name="prefs_repeat_interval_uses_time">PREFS_REPEAT_INTERVAL_USE_TIME</string>
    <string name="prefs_default_auto_snooze">PREFS_DEFAULT_AUTO_SNOOZE</string>

    <string name="colon">:</string>
    <string name="reset_all">Reset All</string>
    <string name="no_reminders_text">I am empty. Fill me</string>

    <string name="settings_edit_time_setters">Edit Time Setters</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_repeat_interval_uses_due_date">Repeat Interval Uses Due Date</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>

    <string name="delete_all">Delete All</string>
    <string name="edit_due_date">Edit Due Date</string>

</resources>
