<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/editor_header">
        <Preference app:title="@string/preference_edit_timer_setters"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/defaults_header">
        <ListPreference
            app:key="@string/prefs_default_auto_snooze"
            app:title="Auto Snooze"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/auto_snooze_entries"
            app:entryValues="@array/auto_snooze_values"
            app:defaultValue="60000"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/repeat_interval">
        <SwitchPreferenceCompat
            app:key="@string/prefs_repeat_interval_uses_time"
            app:title="Use reminder's time"
            app:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
