<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/noneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_none"/>
    <TextView
        android:id="@+id/everyMinuteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_minute"/>
    <TextView
        android:id="@+id/every5MinutesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_5_minute"/>
    <TextView
        android:id="@+id/every10MinutesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_10_minutes"/>
    <TextView
        android:id="@+id/every15MinutesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_15_minutes"/>
    <TextView
        android:id="@+id/every30MinutesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_30_minutes"/>
    <TextView
        android:id="@+id/everyHourTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:text="@string/auto_snooze_hour"/>

</LinearLayout>