<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.util.Calendar"/>

        <variable
            name="viewmodel"
            type="com.kiwicorp.dumbdue.ui.addeditreminder.AddEditReminderViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/every_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/main_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/frequency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintStart_toEndOf="@+id/every_text"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="0dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    tools:text="22" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/scope_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                app:layout_constraintStart_toEndOf="@id/frequency_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:inputType="none"
                    android:editable="false"
                    tools:text="months"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/scope_text">

                <include
                    android:id="@+id/choose_weekly_layout"
                    layout="@layout/include_custom_repeat_weekly"
                    android:visibility="gone"/>

                <include
                    android:id="@+id/choose_monthly_layout"
                    layout="@layout/include_custom_repeat_monthly"
                    android:visibility="gone"/>

                <include
                    android:id="@+id/choose_yearly_layout"
                    layout="@layout/include_custom_repeat_yearly"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/start_date_text"
                app:layout_constraintTop_toTopOf="@id/start_date_text"
                android:text="@string/start"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toEndOf="@id/start_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="0dp"
                    android:editable="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    tools:text="June 24, 2020" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_date_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="0dp"
                    android:editable="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    tools:text="2:00 PM" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:shadowColor="@android:color/transparent"
                android:text="@string/done"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_text"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
